fix style btn in header, lang switcher, animation mobile

--- a/src/shared/ui/Buttons/Button/Button.module.scss
+++ b/src/shared/ui/Buttons/Button/Button.module.scss
@@ -114,7 +114,7 @@
 
 .Small {
   width: 9.4375rem;
-  height: 3.5rem;
+  height: 3rem;
   padding: 1rem 2.5rem;
 }
 
@@ -129,6 +129,7 @@
   height: 3.5rem;
   padding: 0.75rem 1.5rem;
 }
+
 
 @media screen and (max-width: 1200px) {
   .Small {
