--- a/src/widgets/MainComponents/ui/BgAnimation/BgAnimation.scss
+++ b/src/widgets/MainComponents/ui/BgAnimation/BgAnimation.scss
@@ -145,7 +145,7 @@
     }
 
     100%{
-      transform: translateY(calc(25.75rem));
+      transform: translateY(calc(30.75rem));
     }
   }
  
